fixed chart height on smaller mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,6 +317,10 @@ main {
     .today-card{
         flex-basis: 100%;  
     }
+
+    .chart {
+        min-height: 20rem;
+    }
 }
 
 
